tests/diagnostic_golden/semantic_common_mismatch.f
      SUBROUTINE S1
      INTEGER A
      COMMON /BLK/ A
      END
      SUBROUTINE S2
      REAL A
      COMMON /BLK/ A
      END
